# phantom-ai

./: .env.example  .gitignore  CLAUDE.md  GPU_SETUP_STEPS.md  README.md  install-nvidia.sh  pyproject.toml
docs/: phase2-gpu-setup.md
k8s/: chromadb-deployment.yaml  gpu-detection-job.yaml  kustomization.yaml  namespace.yaml  network-policy.yaml  nvidia-device-plugin.yaml  nvidia-install-daemonset.yaml  ollama-deployment.yaml  rbac.yaml  redis-deployment.yaml
src/phantom_ai/: __init__.py  config.py  main.py
src/phantom_ai/agent/: __init__.py
src/phantom_ai/gimbal/: __init__.py
src/phantom_ai/rag/: __init__.py
src/phantom_ai/vision/: __init__.py
src/phantom_ai/voice/: __init__.py
systemd/: phantom-ai-gimbal.service  phantom-ai-voice.service
