[project]
name = "phantom-ai"
version = "0.1.0"
description = "Autonomous AI system managing k3s homelab cluster with voice, vision, gimbal control"
authors = [{name = "RealPhantomLee"}]
license = {text = "Private"}
requires-python = ">=3.10"

dependencies = [
    # Web framework
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",

    # Kubernetes
    "kubernetes>=28.0.0",

    # LLM & RAG
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "chromadb>=0.4.0",
    "ollama>=0.0.15",

    # Speech
    "faster-whisper>=0.10.0",
    "piper-tts>=1.2.0",
    "openwakeword>=0.5.0",
    "sounddevice>=0.4.6",

    # Vision
    "opencv-python>=4.8.0",
    "ultralytics>=8.0.0",

    # Gimbal/BLE
    "bleak>=0.20.0",

    # State management
    "redis>=5.0.0",

    # Notifications
    "python-telegram-bot>=20.0",

    # Config & logging
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=23.0.0",

    # Utilities
    "aiohttp>=3.9.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
